tests/error/poly_errors_py312/variadic4.py
from guppylang.decorator import guppy


@guppy.struct
class MyStruct[**Ts]:
    pass


guppy.compile(MyStruct)
